--- a/thor.css
+++ b/thor.css
@@ -56,11 +56,7 @@
    letter-spacing: 3px;
    text-decoration-line: underline; 
     
-    
-  @media only screen and (max-width: 480px) {
-      visibility:none;
-  }
-
+  
 
 }
 
@@ -81,3 +77,16 @@
     color: rgba(80, 6, 141, 0.808);
     margin-left: 50px;
 }
+
+  @media only screen and (max-width: 480px) {
+      #h-header{
+         visibility:none;
+      }
+      
+      #h-footer{
+        visibility:none;  
+      }
+         
+      
+  }
+
