--- a/thor.css
+++ b/thor.css
@@ -73,8 +73,8 @@
 
 .reno{
     font-size: 40px;
-    font-family:'Times New Roman', Times, serif;
-    color: rgba(80, 6, 141, 0.808);
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: rgba(8, 1, 14, 0.808);
     margin-left: 50px;
 }
 
